# react-app-maker

./: README.md  constants.py  main.py  prompts.py  pyproject.toml
tests/: test_gpt.py
web_maker/gpt/: main_model.py
web_maker/tree_of_thoughts/: thought_node.py  tree_of_thoughts.py
web_maker/utils/: file_utils.py  information_gatherer.py
website-skeleton/: package-lock.json  package.json
website-skeleton/src/: App.css  App.js  index.css
