[tool.poetry]
name = "project-genius"
version = "0.1.0"
description = ""
authors = ["isaac.shiffman <isaac.shiffman@kairostech.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.51.2"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
